[project]
name = "sms-survey"
version = "1.0.0"
description = "Lightweight SMS survey engine with Twilio integration"
authors = [{name = "Tony", email = "tony@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "twilio==9.3.7",
    "jinja2==3.1.4",
    "pyyaml==6.0.2",
    "python-multipart==0.0.17",
    "psycopg2-binary==2.9.10",
    "simpleeval>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "faker==33.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
